Working on the project pages

--- a/_drafts/2014-01-27-Nursery.markdown
+++ b/_drafts/2014-01-27-Nursery.markdown
@@ -4,5 +4,5 @@ title:  "Nursery"
 date:   2014-01-27 12:30:00
 categories: projects
 extra: ""
-image: "Grid_Nursery.png"
+grid: "Grid_Nursery.png"
 ---
