--- a/_drafts/2014-01-27-Nursery.markdown
+++ b/_drafts/2014-01-27-Nursery.markdown
@@ -8,5 +8,7 @@ grid: "Grid_Nursery.png"
 ---
 
 These two illustrations depict the well-known nursery rhyme "Jack and Jill" and the lesser-known "I Saw a Ship a-Sailing."
-<img src="Jack+Jill.png">
-<img src="ShipASailin.png">
+<div>
+<img src="Jack+Jill.png"/>
+<img src="ShipASailin.png"/>
+</div>
