--- a/_drafts/2014-01-29-ChipIn.markdown
+++ b/_drafts/2014-01-29-ChipIn.markdown
@@ -4,7 +4,7 @@ title:  "CHIP In Campaign"
 date:   2014-01-29 12:30:00
 categories: projects
 extra: ""
-grid: ""
+grid: "Grid_ChipIn.png"
 images: [ALS_1572.jpg, ALS_1582.jpg]
 
 ---
